@@ -1,3 +1,7 @@
+drkns 18.10.2017 00:47:15 +0100 - build 5067
+
+1. С форума: некорректное отображение помощи (а на самом деле чтение - см. "четное количество багов"), если её язык не совпадает с текущим.
+
 zg 16.10.2017 17:28:26 +0300 - build 5066
 
 1. 0002760: Отдельные макрообласти для GRABBER, HMENU, DESKTOP.
